chore: compatibility
Signed-off-by: Marcos Tischer Vallim <tischer@gmail.com>